--- a/Theseus/web/MailNewsletter.html
+++ b/Theseus/web/MailNewsletter.html
@@ -1,6 +1,6 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /> 
-<title>Newsletter Theseus</title>
+<title>Newsletter Theseus #1 - Sep.2015</title>
 <body style="margin: 0px 0px 0px 0px; padding: 0px 0px 0px 0px; font-family: Trebuchet MS, Arial, Verdana, sans-serif;">
  
 <!-- Start Main Table -->
